--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/netflix-favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <!-- <link href="src/assets/style.css" rel="stylesheet"> -->
+  <script type="module" src="/src/main.js" defer></script>
   <title>netVue clone using Vue.js!</title>
 </head>
 
 <body>
   <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>  
+
 </body>
 
 </html>
