--- a/index.html
+++ b/index.html
@@ -9,14 +9,33 @@
   <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  <!-- <link href="src/assets/style.css" rel="stylesheet"> -->
   <script type="module" src="/src/main.js" defer></script>
   <title>netVue clone using Vue.js!</title>
 </head>
 
 <body>
   <div id="app"></div>
-
+  <footer class="container-fluid">
+    <div class="container">
+      <p class="lead my-4 text-center">Questions? Call <a href="tel:0 801-000-723">0 810-000-723</a></p>
+    </div>
+    <div class="row row-cols-2 row-cols-lg-6">
+      <div class="col">
+        <ul class="nav flex-column footer-links">
+          <li class="nav-item mb-2"><a href="https://help.netflix.com/support/412" target="_blank" class="nav-link p-0 text-muted">FAQ</a></li>
+          <li class="nav-item mb-2"><a href="https://help.netflix.com/legal/termsofuse" target="_blank" class="nav-link p-0 text-muted">Terms of Use</a></li>
+          <li class="nav-item mb-2"><a href="https://www.netflix.com/za/login#" target="_blank" class="nav-link p-0 text-muted">Cookie Preferences</a></li>
+        </ul>
+      </div>
+      <div class="col">
+        <ul class="nav flex-column footer-links">
+          <li class="nav-item mb-2"><a href="https://help.netflix.com/" target="_blank" class="nav-link p-0 text-muted">Help Center</a></li>
+          <li class="nav-item mb-2"><a href="https://help.netflix.com/legal/privacy" target="_blank" class="nav-link p-0 text-muted">Privacy</a></li>
+          <li class="nav-item mb-2"><a href="https://help.netflix.com/legal/corpinfo" target="_blank" class="nav-link p-0 text-muted">Corporate Information</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
