Put movies to DOM

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <div id="app"></div>
+  <div id="app" class="bg-dark"></div>
   <!-- <footer class="container-fluid">
     <div class="container">
       <p class="lead my-4 text-center">Questions? Call <a href="tel:0 801-000-723">0 810-000-723</a></p>
