--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <title>netVue clone using Vue3!</title>
 </head>
 
-<body>
+<body class="bg-dark">
 
-  <div id="app" class="bg-dark"></div>
-  <!-- <footer class="container-fluid">
+  <div id="app"></div>
+  <footer class="container-fluid">
     <div class="container">
       <p class="lead my-4 text-center">Questions? Call <a href="tel:0 801-000-723">0 810-000-723</a></p>
     </div>
@@ -42,7 +42,7 @@
         </ul>
       </div>
     </div>
-  </footer> -->
+  </footer>
 </body>
 
 </html>
