--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="bg-dark">
 
   <div id="app"></div>
-  <footer class="container-fluid">
+  <footer class="container-fluid bg-dark">
     <div class="container">
       <p class="text-white my-4 text-center">Questions? Call <a href="tel:0 801-000-723">0 810-000-723</a></p>
     </div>
