--- a/index.html
+++ b/index.html
@@ -14,35 +14,38 @@
 </head>
 
 <body class="bg-dark">
-
-  <div id="app"></div>
-  <footer class="container-fluid bg-dark">
-    <div class="container">
-      <p class="text-white my-4 text-center">Questions? Call <a href="tel:0 801-000-723">0 810-000-723</a></p>
+  <div id="page-container">
+    <div id="content-wrap">
+      <div id="app"></div>
+      <footer class="container-fluid bg-dark">
+        <div class="container">
+          <p class="text-white my-4 text-center">Questions? Call <a href="tel:0 801-000-723">0 810-000-723</a></p>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 text-center">
+            <ul class="flex-column footer-links">
+              <li class="mb-2"><a href="https://help.netflix.com/support/412" target="_blank"
+                  class="p-0 text-muted">FAQ</a></li>
+              <li class="mb-2"><a href="https://help.netflix.com/legal/termsofuse" target="_blank"
+                  class="p-0 text-muted">Terms of Use</a></li>
+              <li class="mb-2"><a href="https://www.netflix.com/za/login#" target="_blank"
+                  class="p-0 text-muted">Cookie Preferences</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-6 text-center">
+            <ul class="flex-column footer-links">
+              <li class="mb-2"><a href="https://help.netflix.com/" target="_blank"
+                  class="p-0 text-muted">Help Center</a></li>
+              <li class="mb-2"><a href="https://help.netflix.com/legal/privacy" target="_blank"
+                  class="p-0 text-muted">Privacy</a></li>
+              <li class="mb-2"><a href="https://help.netflix.com/legal/corpinfo" target="_blank"
+                  class="p-0 text-muted">Corporate Information</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
-    <div class="row">
-      <div class="col-lg-6 text-center">
-        <ul class="flex-column footer-links">
-          <li class="mb-2"><a href="https://help.netflix.com/support/412" target="_blank"
-              class="p-0 text-muted">FAQ</a></li>
-          <li class="mb-2"><a href="https://help.netflix.com/legal/termsofuse" target="_blank"
-              class="p-0 text-muted">Terms of Use</a></li>
-          <li class="mb-2"><a href="https://www.netflix.com/za/login#" target="_blank"
-              class="p-0 text-muted">Cookie Preferences</a></li>
-        </ul>
-      </div>
-      <div class="col-lg-6 text-center">
-        <ul class="flex-column footer-links">
-          <li class="mb-2"><a href="https://help.netflix.com/" target="_blank"
-              class="p-0 text-muted">Help Center</a></li>
-          <li class="mb-2"><a href="https://help.netflix.com/legal/privacy" target="_blank"
-              class="p-0 text-muted">Privacy</a></li>
-          <li class="mb-2"><a href="https://help.netflix.com/legal/corpinfo" target="_blank"
-              class="p-0 text-muted">Corporate Information</a></li>
-        </ul>
-      </div>
-    </div>
-  </footer>
+  </div>
 </body>
 
 </html>
