--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/netflix-favicon.png" />
+  <link rel="icon" href="./public/images/netflix-favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" defer></script>
-  <script type="application/javascript" src="/src/main.js" defer></script>
+  <script type="application/javascript" src="./src/main.js" defer></script>
   <title>netVue clone using Vue3!</title>
   <meta name="description" content="Netflix Clone app created with Vue.js">
 </head>
